# LANTHEI

./: README.md  app.py  process_imdb.py  upload_to_hf.py
lanthei_pkg/: README.md  pyproject.toml
lanthei_pkg/lanthei/: cli.py
